; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/extr_recorder.c_record_packet_new.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/extr_recorder.c_record_packet_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.record_packet = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.record_packet* (i32*)* @record_packet_new to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.record_packet* @record_packet_new(i32* %0) #0 {
  %2 = alloca %struct.record_packet*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca %struct.record_packet*, align 8
  store i32* %0, i32** %3, align 8
  %5 = call %struct.record_packet* @SDL_malloc(i32 4)
  store %struct.record_packet* %5, %struct.record_packet** %4, align 8
  %6 = load %struct.record_packet*, %struct.record_packet** %4, align 8
  %7 = icmp ne %struct.record_packet* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store %struct.record_packet* null, %struct.record_packet** %2, align 8
  br label %23

9:                                                ; preds = %1
  %10 = load %struct.record_packet*, %struct.record_packet** %4, align 8
  %11 = getelementptr inbounds %struct.record_packet, %struct.record_packet* %10, i32 0, i32 0
  %12 = call i32 @av_init_packet(i32* %11)
  %13 = load %struct.record_packet*, %struct.record_packet** %4, align 8
  %14 = getelementptr inbounds %struct.record_packet, %struct.record_packet* %13, i32 0, i32 0
  %15 = load i32*, i32** %3, align 8
  %16 = call i64 @av_packet_ref(i32* %14, i32* %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %9
  %19 = load %struct.record_packet*, %struct.record_packet** %4, align 8
  %20 = call i32 @SDL_free(%struct.record_packet* %19)
  store %struct.record_packet* null, %struct.record_packet** %2, align 8
  br label %23

21:                                               ; preds = %9
  %22 = load %struct.record_packet*, %struct.record_packet** %4, align 8
  store %struct.record_packet* %22, %struct.record_packet** %2, align 8
  br label %23

23:                                               ; preds = %21, %18, %8
  %24 = load %struct.record_packet*, %struct.record_packet** %2, align 8
  ret %struct.record_packet* %24
}

declare dso_local %struct.record_packet* @SDL_malloc(i32) #1

declare dso_local i32 @av_init_packet(i32*) #1

declare dso_local i64 @av_packet_ref(i32*, i32*) #1

declare dso_local i32 @SDL_free(%struct.record_packet*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
